P3/ejudge_contests/02/var/archive/xmlreports/0/0/1/000058
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="58" judge-id="1" status="CE" scoring="ACM" run-tests="0" contest-id="302" compile-error="yes" >
  <uuid>5a9300ea-7fc7-4404-b2ab-a3bbe89e8ddb</uuid>
  <compiler_output>000058.cpp:3:3: error: invalid preprocessing directive #Visual
 # Visual C++ Express 2008
   ^~~~~~
000058.cpp:2:1: error: 'Microsoft' does not name a type
 Microsoft Visual Studio Solution File, Format Version 10.00
 ^~~~~~~~~
000058.cpp:12:41: error: expected unqualified-id before '.' token
   {8E4E2E56-A970-4AE1-ADB0-48867A654999}.Debug|Win32.ActiveCfg = Debug|Win32
                                         ^
000058.cpp:13:41: error: expected unqualified-id before '.' token
   {8E4E2E56-A970-4AE1-ADB0-48867A654999}.Debug|Win32.Build.0 = Debug|Win32
                                         ^
000058.cpp:14:41: error: expected unqualified-id before '.' token
   {8E4E2E56-A970-4AE1-ADB0-48867A654999}.Release|Win32.ActiveCfg = Release|Win32
                                         ^
000058.cpp:15:41: error: expected unqualified-id before '.' token
   {8E4E2E56-A970-4AE1-ADB0-48867A654999}.Release|Win32.Build.0 = Release|Win32
                                         ^
</compiler_output>
</testing-report>
